--- a/.github/workflows/tools_continuous_delivery.yml
+++ b/.github/workflows/tools_continuous_delivery.yml
@@ -20,6 +20,7 @@ jobs:
   main_branch_release:
     if: github.event_name == 'push'
     uses: ./.github/workflows/wheel_distributing.yml
+    name: Private PyPI main branch release
     with:
       ReleaseType: "Release"
       UploadAsLatest: "True"
@@ -30,6 +31,7 @@ jobs:
   non_main_branch_release:
     if: github.event_name == 'workflow_dispatch'
     uses: ./.github/workflows/wheel_distributing.yml
+    name: Private PyPI non-main branch release
     with:
       ReleaseType: "Test"
       UploadAsLatest: "False"
