--- a/scripts/distributing/configs/distribution_settings.json
+++ b/scripts/distributing/configs/distribution_settings.json
@@ -14,14 +14,14 @@
       "storage_account": "azuremlsdktestpypi",
       "packages_container": "repo",
       "index_container": "wheels",
-      "blob_prefix": "promptflow-1227",
+      "blob_prefix": "promptflow",
       "endpoint": "azuremlsdktestpypi.azureedge.net"
     },
     "internal-index-test": {
       "storage_account": "azuremlsdktestpypi",
       "packages_container": "repo",
       "index_container": "wheels",
-      "blob_prefix": "test-promptflow-1218",
+      "blob_prefix": "test-promptflow",
       "endpoint": "azuremlsdktestpypi.azureedge.net"
     }
   }
