--- a/.github/workflows/tools_continuous_delivery.yml
+++ b/.github/workflows/tools_continuous_delivery.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
     inputs:
       branch:
-        description: 'Branch to run the workflow on'
+        description: 'Release branch name'
         required: true
         default: 'main'
         type: string
