support tool internal PyPI release: release from main branch, and release from non-main branch (#1513)
# Description

support tool internal PyPI release: release from main branch, and
release from non-main branch. Contributor can release from non-main
branch and use the test pkg to verify.

Verified the changes:
1. non-main branch package release

![image](https://github.com/microsoft/promptflow/assets/49483542/82fed115-42bf-458a-996d-cdfdc2150dc3)
2. main branch package release

![image](https://github.com/microsoft/promptflow/assets/49483542/7ab7108a-0984-4cef-8de6-1ed8bdcb3ca8)


# All Promptflow Contribution checklist:
- [X] **The pull request does not introduce [breaking changes].**
- [ ] **CHANGELOG is updated for new features, bug fixes or other
significant changes.**
- [X] **I have read the [contribution guidelines](../CONTRIBUTING.md).**
- [ ] **Create an issue and link to the pull request to get dedicated
review from promptflow team. Learn more: [suggested
workflow](../CONTRIBUTING.md#suggested-workflow).**

## General Guidelines and Best Practices
- [X] Title of the pull request is clear and informative.
- [X] There are a small number of commits, each of which have an
informative message. This means that previously merged commits do not
appear in the history of the PR. For more information on cleaning up the
commits in your PR, [see this
page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### Testing Guidelines
- [ ] Pull request includes test coverage for the included changes.

--- a/.github/workflows/tools_continuous_delivery.yml
+++ b/.github/workflows/tools_continuous_delivery.yml
@@ -8,23 +8,33 @@ on:
       - 'src/promptflow-tools/**'
       - '!README.*'
       - '!src/promptflow-tools/tests/**'
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Release branch name'
+        required: true
+        default: 'main'
+        type: string
 
 jobs:
-  continuous_delivery_release:
+  main_branch_release:
     if: github.event_name == 'push'
     uses: ./.github/workflows/wheel_distributing.yml
-    name: Continuous delivery release
+    name: Private PyPI main branch release
     with:
-      ReleaseType: "Test"
+      ReleaseType: "Release"
       UploadAsLatest: "True"
       SourceFolderName: "promptflow-tools"
       ConfigsFolderPath: "scripts/distributing/configs"
     secrets: inherit
-
-  deploy_runtime_with_updated_tools_package:
-    needs: continuous_delivery_release
-    uses: ./.github/workflows/tools_deploy_runtime.yml
-    name: Deploy runtime
+  
+  non_main_branch_release:
+    if: github.event_name == 'workflow_dispatch'
+    uses: ./.github/workflows/wheel_distributing.yml
+    name: Private PyPI non-main branch release
     with:
-      ToolsPackageVersion: ${{ needs.continuous_delivery_release.outputs.PackageVersion }}
+      ReleaseType: "Test"
+      UploadAsLatest: "False"
+      SourceFolderName: "promptflow-tools"
+      ConfigsFolderPath: "scripts/distributing/configs"
     secrets: inherit
