--- a/examples/flows/chat/chat-wtih-assistant/flow.dag.yaml
+++ b/examples/flows/chat/chat-wtih-assistant/flow.dag.yaml
@@ -6,9 +6,6 @@ inputs:
     type: string
     is_chat_input: true
     default: Please create csv file to list google and microsoft stock price
-  file_ids:
-    type: list
-    default: []
   assistant_id:
     type: string
     default: asst_eHO2rwEYqGH3pzzHHov2kBCG
@@ -29,30 +26,29 @@ nodes:
     inputs:
       conn: chw_openai
       content: ${inputs.content}
-      file_ids: ${inputs.file_ids}
-      assistant_id: ${inputs.assistant_id}
-      thread_id: ${inputs.thread_id}
+      assistant_id: asst_eHO2rwEYqGH3pzzHHov2kBCG
+      thread_id: thread_yBPHSHOqDm5suG3kbGrfEKU1
       assistant_definition:
         module: gpt-4-1106-preview
         instructions: You are a helpful assistant.
         tools:
           - type: code_interpreter
-          - type: promptflow_tool
+          - type: function
             source:
               type: code
               path: get_calorie.py
             tool_type: python
-          - type: promptflow_tool
+          - type: function
             source:
               type: code
               path: get_stock_price.py
             tool_type: python
-          - type: promptflow_tool
+          - type: function
             source:
               type: code
               path: get_temperature.py
             tool_type: python
-          - type: promptflow_tool
+          - type: function
             source:
               type: code
               path: multiply.py
