try to fix yaml content

--- a/src/promptflow/tests/test_configs/flows/chat_flow/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/chat_flow/flow.dag.yaml
@@ -11,20 +11,20 @@ outputs:
     reference: ${show_answer.output}
     is_chat_output: true
 nodes:
-- inputs:
-    deployment_name: gpt-35-turbo
-    max_tokens: "256"
-    temperature: "0.7"
-    chat_history: ${inputs.chat_history}
-    question: ${inputs.question}
-  name: chat_node
+- name: chat_node
   type: llm
   source:
     type: code
     path: chat.jinja2
-  api: chat
+  inputs:
+    deployment_name: gpt-35-turbo
+    max_tokens: 256
+    temperature: 0.7
+    chat_history: ${inputs.chat_history}
+    question: ${inputs.question}
   provider: AzureOpenAI
   connection: azure_open_ai_connection
+  api: chat
 - name: show_answer
   type: python
   source:
@@ -32,4 +32,3 @@ nodes:
     path: show_answer.py
   inputs:
     chat_answer: ${chat_node.output}
-node_variants: {}
