--- a/src/promptflow/tests/test_configs/flows/assistant_tool_with_file_id/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/assistant_tool_with_file_id/flow.dag.yaml
@@ -1,5 +1,5 @@
 inputs:
-  chat_input:
+  assistant_input:
     type: list
     default:
     - type: text
@@ -14,7 +14,7 @@ inputs:
     type: string
     default: ""
 outputs:
-  chat_output:
+  assistant_output:
     type: string
     reference: ${add_message_and_run.output}
   thread_id:
