--- a/.github/workflows/samples_tools_use_cases_custom_strong_type_connection_script_tool_showcase.yml
+++ b/.github/workflows/samples_tools_use_cases_custom_strong_type_connection_script_tool_showcase.yml
@@ -16,7 +16,7 @@ env:
   IS_IN_CI_PIPELINE: "true"
 
 jobs:
-  samples_readme_ci:
+  samples_tools_use_cases_custom_strong_type_connection_script_tool_showcase:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
