--- a/.github/workflows/samples_flows_evaluation_eval_classification_accuracy.yml
+++ b/.github/workflows/samples_flows_evaluation_eval_classification_accuracy.yml
@@ -16,7 +16,7 @@ env:
   IS_IN_CI_PIPELINE: "true"
 
 jobs:
-  samples_readme_ci:
+  samples_flows_evaluation_eval_classification_accuracy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
