--- a/.github/workflows/samples_flows_standard_customer_intent_extraction.yml
+++ b/.github/workflows/samples_flows_standard_customer_intent_extraction.yml
@@ -16,7 +16,7 @@ env:
   IS_IN_CI_PIPELINE: "true"
 
 jobs:
-  samples_readme_ci:
+  samples_flows_standard_customer_intent_extraction:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
