--- a/.github/workflows/samples_tutorials_flow_fine_tuning_evaluation_promptflow_quality_improvement.yml
+++ b/.github/workflows/samples_tutorials_flow_fine_tuning_evaluation_promptflow_quality_improvement.yml
@@ -16,7 +16,7 @@ env:
   IS_IN_CI_PIPELINE: "true"
 
 jobs:
-  samples_readme_ci:
+  samples_tutorials_flow_fine_tuning_evaluation_promptflow_quality_improvement:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
