--- a/src/promptflow-tools/promptflow/tools/yamls/aoai_gpt4v.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/aoai_gpt4v.yaml
@@ -21,9 +21,28 @@ promptflow.tools.aoai_gpt4v.AzureOpenAI.chat:
     connection:
       type:
         - AzureOpenAIConnection
+    version:
+      type:
+      - string
+      dynamic_list:
+        func_path: promptflow.tools.aoai_gpt4v.AzureOpenAI.list_versions
+      enabled_by: connection
+      enabled_by_type: [AzureOpenAIConnection]
+      allow_manual_entry: false
+      is_multi_select: false
     deployment_name:
       type:
-        - string
+      - string
+      dynamic_list:
+        func_path: promptflow.tools.aoai_gpt4v.AzureOpenAI.list_deployment_names
+        func_kwargs: 
+        - name: version
+          type: 
+          - string
+          reference: ${inputs.version}
+      enabled_by: version
+      allow_manual_entry: false
+      is_multi_select: false
     temperature:
       default: 1
       type:
