--- a/src/promptflow-tools/promptflow/tools/yamls/aoai_gpt4v.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/aoai_gpt4v.yaml
@@ -25,7 +25,12 @@ promptflow.tools.aoai_gpt4v.AzureOpenAI.chat:
       type:
       - string
       dynamic_list:
-        func_path: promptflow.tools.aoai_gpt4v.AzureOpenAI.list_versions
+        func_path: promptflow.tools.aoai_gpt4v.list_versions
+        func_kwargs: 
+        - name: conenction
+          type: 
+          - string
+          reference: ${inputs.connection}
       enabled_by: connection
       enabled_by_type: [AzureOpenAIConnection]
       allow_manual_entry: false
@@ -34,8 +39,12 @@ promptflow.tools.aoai_gpt4v.AzureOpenAI.chat:
       type:
       - string
       dynamic_list:
-        func_path: promptflow.tools.aoai_gpt4v.AzureOpenAI.list_deployment_names
+        func_path: promptflow.tools.aoai_gpt4v.list_deployment_names
         func_kwargs: 
+        - name: conenction
+          type: 
+          - string
+          reference: ${inputs.connection}
         - name: version
           type: 
           - string
