--- a/src/promptflow-tools/promptflow/tools/yamls/aoai_gpt4v.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/aoai_gpt4v.yaml
@@ -33,7 +33,7 @@ promptflow.tools.aoai_gpt4v.AzureOpenAI.chat:
           reference: ${inputs.connection}
       enabled_by: connection
       enabled_by_type: [AzureOpenAIConnection]
-      allow_manual_entry: false
+      allow_manual_entry: true
       is_multi_select: false
     deployment_name:
       type:
