Check_enforcer enforce readme and examples check (#1644)
# Description

Changes in readme.py: add a -c parameter to retrieve all path filters.
New utility fnmatch: same with fnmatch library, check if file name match
some given glob.
Check enforcer: now when examples files are changed. It will run readme
with -c parameter. get a valid list of path filter. check every file
name against the path filter list and find out what pipeline should run.

This PR may need splitting.

refactor original PS1 script to Py script for GREAT PERF GAIN.

Take this PR as example: there are 58 files in the PR, and since it
contains example changes, there are about 100 checks for each file.
Powershell will stuck on this 58*100 checks for over tens of minutes. At
the same time, python could return me with correct results within
seconds.

# All Promptflow Contribution checklist:
- [x] **The pull request does not introduce [breaking changes].**
- [ ] **CHANGELOG is updated for new features, bug fixes or other
significant changes.**
- [ ] **I have read the [contribution guidelines](../CONTRIBUTING.md).**
- [ ] **Create an issue and link to the pull request to get dedicated
review from promptflow team. Learn more: [suggested
workflow](../CONTRIBUTING.md#suggested-workflow).**

## General Guidelines and Best Practices
- [ ] Title of the pull request is clear and informative.
- [ ] There are a small number of commits, each of which have an
informative message. This means that previously merged commits do not
appear in the history of the PR. For more information on cleaning up the
commits in your PR, [see this
page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### Testing Guidelines
- [ ] Pull request includes test coverage for the included changes.

---------

Co-authored-by: Zhengfei Wang <38847871+zhengfeiwang@users.noreply.github.com>

--- a/.github/workflows/samples_flows_chat_chatwithpdf_chatwithpdfazure.yml
+++ b/.github/workflows/samples_flows_chat_chatwithpdf_chatwithpdfazure.yml
@@ -9,14 +9,14 @@ on:
     - cron: "44 20 * * *" # Every day starting at 4:44 BJT
   pull_request:
     branches: [ main ]
-    paths: [ examples/flows/chat/chat-with-pdf/**, examples/*requirements.txt, .github/workflows/samples_flows_chat_chatwithpdf_chatwithpdfazure.yml, '!examples/flows/integrations/**' ]
+    paths: [ examples/flows/chat/chat-with-pdf/**, examples/*requirements.txt, .github/workflows/samples_flows_chat_chatwithpdf_chatwithpdfazure.yml ]
   workflow_dispatch:
 
 env:
   IS_IN_CI_PIPELINE: "true"
 
 jobs:
-  samples_notebook_ci:
+  samples_flows_chat_chatwithpdf_chatwithpdfazure:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
