--- a/.github/workflows/check_enforcer.yml
+++ b/.github/workflows/check_enforcer.yml
@@ -11,11 +11,16 @@ jobs:
       - uses: actions/checkout@v4
       - run: git fetch origin main
       - run: env | sort >> $GITHUB_OUTPUT
+      - name: Python Setup - ubuntu-latest - Python Version 3.9
+        uses: "./.github/actions/step_create_python_environment"
+        with:
+          pythonVersion: 3.9
+      - run: pip install -r ${{ github.workspace }}/examples/dev_requirements.txt
       - name: Summarize check status
         id: summarize_check_status
         working-directory: ${{ github.workspace }}
         shell: pwsh
         run: |
-            . .\scripts\building\check_enforcer.ps1
+            python ${{ github.workspace }}/scripts/building/check_enforcer.py -t "${{ github.workspace }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
