--- a/.github/workflows/samples_connections_connection.yml
+++ b/.github/workflows/samples_connections_connection.yml
@@ -9,14 +9,14 @@ on:
     - cron: "13 22 * * *" # Every day starting at 6:13 BJT
   pull_request:
     branches: [ main ]
-    paths: [ examples/connections/**, examples/*requirements.txt, .github/workflows/samples_connections_connection.yml, '!examples/flows/integrations/**' ]
+    paths: [ examples/connections/**, examples/*requirements.txt, .github/workflows/samples_connections_connection.yml ]
   workflow_dispatch:
 
 env:
   IS_IN_CI_PIPELINE: "true"
 
 jobs:
-  samples_notebook_ci:
+  samples_connections_connection:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
