--- a/.github/workflows/samples_flows_chat_chatwithpdf_chatwithpdf.yml
+++ b/.github/workflows/samples_flows_chat_chatwithpdf_chatwithpdf.yml
@@ -9,14 +9,14 @@ on:
     - cron: "12 21 * * *" # Every day starting at 5:12 BJT
   pull_request:
     branches: [ main ]
-    paths: [ examples/flows/chat/chat-with-pdf/**, examples/*requirements.txt, .github/workflows/samples_flows_chat_chatwithpdf_chatwithpdf.yml, '!examples/flows/integrations/**' ]
+    paths: [ examples/flows/chat/chat-with-pdf/**, examples/*requirements.txt, .github/workflows/samples_flows_chat_chatwithpdf_chatwithpdf.yml ]
   workflow_dispatch:
 
 env:
   IS_IN_CI_PIPELINE: "true"
 
 jobs:
-  samples_notebook_ci:
+  samples_flows_chat_chatwithpdf_chatwithpdf:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
