--- a/.github/workflows/tools_release_tag.yml
+++ b/.github/workflows/tools_release_tag.yml
@@ -21,6 +21,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
