--- a/src/promptflow/tests/test_configs/flows/flow_with_trace/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/flow_with_trace/flow.dag.yaml
@@ -14,3 +14,11 @@ nodes:
     path: greetings.py
   inputs:
     user_id: ${inputs.user_id}
+
+- name: greetings2
+  type: python
+  source:
+    type: code
+    path: greetings.py
+  inputs:
+    user_id: ${inputs.user_id}
